<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.agathver.cardtrack.ui.cards.CardsFragment"
        android:label="@string/title_cards"
        tools:layout="@layout/fragment_cards" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.agathver.cardtrack.ui.transactions.TransactionsFragment"
        android:label="@string/title_spends"
        tools:layout="@layout/fragment_transactions" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.agathver.cardtrack.ui.notifications.NotificationsFragment"
        android:label="@string/title_alerts"
        tools:layout="@layout/fragment_notifications" />
</navigation>
